fixed bug large img on safari

--- a/assets/styles/css/global-styles.css
+++ b/assets/styles/css/global-styles.css
@@ -161,10 +161,11 @@ section {
   background-size: 75%;
   background-position: right 5rem center;
   background-repeat: no-repeat; }
-  .home header #bio img {
-    width: 339px;
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1); }
+
+#bio img {
+  width: 339px;
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1); }
 
 #gallery #fayrouz {
   position: relative; }
